style.css
/* ... */
@media screen and (max-width:705px){
    .footer__container{
        min-height: 30vh;
        flex-direction: column;
        justify-content: center;
        align-items:center;
    }
    .footer__logo_fill{
        margin-bottom: 35px;
    }
    .footer__blocks{
        flex-direction: row;
        width: 70%;
        margin-bottom: 35px;
    }
    .footer__text_subtitle{
        justify-content: flex-start;
    }
    .footer__text_exception{
        width: 70%;
    }
    .footer__item_visa{
        margin: 0 10px 0 0;
    }
    .footer__item_master{
        margin: 0 10px 0 0;
    }
    .footer__blocks2{
        flex-direction: row;
        width: 70%;
        justify-content: space-between;
    }
    .footer_block_row{
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 0;
    }
    .footer__text_rights{
        display: none;
    }

}

@media screen and (max-width:690px){
    .main__filtr_item{
        display: none;
    }
    .main__filter_item_filtr{
        display: flex;
    }
    .search__popup{
        padding: 20px 30px;
    }
    .popup__search_input{
        font-size: 16px;
        padding-right: 10px;
        width: 80%;
    }
}


@media screen and (max-width:590px){
    .popup__search_input{
        font-size: 16px;
        padding-right: 10px;
        width: 80%;
    }

}


@media screen and (max-width:530px){
    .header__select{
        display: none;
    }
}



@media screen and (max-width:480px){
    .burger__popup_item:nth-child(4){
        display: flex;
    }
    .burger__popup_item:nth-child(5){
        display: flex;
    }
    .burger__popup_item:nth-child(6){
        display: flex;
    }
    .search__popup{
        padding: 20px 30px;
    }
    .burger__popup_messange{
        display: flex;
    }
    .header__nav{
        display: none;
    }
    .header__a:nth-child(4){
        display: none;
    }
    .header__fill{
        margin: 0;
    }
    .header__fill:nth-child(1){
        display: none;
    }
    .header__fill:nth-child(4){
        display: none;
    }
    .header__select{
        display: none;
    }
    .menu-btn{
        display: flex;
    }
    .main__fill_photo{
        width: 320px;
        height: 320px;
        border-radius: 20px;
    }
    .main__banner{
        width: 320px;
        height: 320px;
        background-size: cover;
    }
    .swiper{
        height: 380px;
        max-width: 98%;
        z-index: 30;
    }
    .swiper-slide{
        height: 320px;
    }
    .main__banner_text{
        display: none;
    }
    .main__banner_bottom{
        display: none;
    }
    .main__filtr_item{
        display: none;
    }
    .main__fill_text{
        display: none;
    }
    .main__about_subtitle{
        font-size: 16px;
    }
    .main__about_history{
        width: 100%;
    }
    .footer__container{
        flex-direction: column;
        min-height: 30vh;
        align-items: center;
    }
    .footer__logo_fill{
        justify-content: center;
        margin-bottom: 20px;
    }
    .footer__text_rights{
        display: none;
    }
    .footer__text_title{
        font-size: 12px;
    }
    .footer__blocks{
        width: 80%;
    }
    .footer__blocks2{
        width: 80%;
    }
    .footer_block:nth-child(4){
        display: flex;
        flex-direction:row;
        align-items: center;
        justify-content: space-between;
        width: 65%;
    }
    .footer__item_master{
        margin: 0 10px 0 0;
    }
    .footer__item_visa{
        margin: 0 10px 0 0;
    }
    .footer__item_privat{
        height: 47px;
        width: 47px;
    }
    .footer__text_exception{
        width: 80%;
    }
}









@media screen and (max-width:420px){
    .header__logo_text{
        line-height: 34px;
        font-size: 30px;
    }
    .header_santa{
        width: 70px;
        height: 66px;
    }
}

@media screen and (max-width:390px){
    .header__logo_text{
        line-height: 32px;
        font-size: 28px;
    }
    .header_santa{
        width: 65px;
        height: 62px;
    }
}


@media screen and (max-width:380px){
    .header__logo_text{
        line-height: 30px;
        font-size: 26px;
    }
    .header_santa{
        width: 60px;
        height: 56px;
    }
    .header__fill{
        margin-right: 10px;
    }
    .footer_block_row{
        flex-direction: column;
    }
    .footer__item_master{
        margin: 0 0px 10px 0;
    }
    .footer__item_visa{
        margin:0 0px 10px 0 ;
    }
    .footer__item_privat{
        width: 45px;
        height: 45px;
    }
    .footer__container{
        min-height: 35vh;
    }
}

@media screen and (max-width:360px){
    .header__logo_text{
        line-height: 28px;
        font-size: 24px;
    }
    .header_santa{
        width: 56px;
        height: 54px;
    }
}


@media screen and (max-width:340px){
    .header__logo_text{
        line-height: 26px;
        font-size: 22px;
    }
    .header_santa{
        width: 52px;
        height: 50px;
    }
}
/* ... */

